修改掉过期方法